# pdf-ai-assistant

./: README.md  pyproject.toml  test-ai-bot.ipynb
pdf_ai_assistant/: __init__.py
pdf_ai_assistant/knowledge_base/: constructors.py
pdf_ai_assistant/manager/: bots.py  sharepoint.py
